# tmlc

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  config.yml  dockerfile  eda.yaml  gen_ref_pages.py  generate_docs.sh  image.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: gh-pages.yml  jekyll-gh-pages.yml
app/: schemas.py
configs/: eda.yaml  training.yml
data/: toxic_multi_class.csv
docs/: gen_ref_pages.py  generate_apidocs.sh  generate_docs.sh  index.md  installation.md  quickstart.md  requirements.txt  troubleshooting.md  uml.md
docs/user_guide/: dataset_requirements.md  eda_validation.md  introduction.md  model_evaluation.md  model_training.md  model_wrapper.md
docs/validation/: eda.md  evaluation.md  interpretability.md  model.md  task_complexity.md  training.md
installation/: index.html
quickstart/: index.html
reference/SUMMARY/: index.html
reference/app/: index.html
reference/components/: index.html
reference/configclasses/: index.html
reference/dataclasses/: index.html
reference/eda/: index.html
reference/exceptions/: index.html
reference/scripts/: index.html
search/: search_index.json
test/components/: test_calculate_best_thresholds.py  test_loss.py  test_metrics.py  test_predictions.py  test_split_data.py  test_thresholds.py
test/configclasses/: test_data_module_config.py  test_dataset_config.py  test_lightning_module_config.py  test_mlflow_config.py  test_model_config.py  test_partial_function_config.py  test_pretrained_config.py  test_tokenizer_config.py  test_trainer_config.py
tests/test_components/: test_calculate_best_thresholds.py  test_get_data.py  test_loss.py
tests/test_configclasses/: test_data_module_config.py  test_dataset_config.py  test_lightning_module_config.py  test_model_config.py  test_partial_function_config.py  test_tokenizer_config.py
tests/test_dataclasses/: test_datamodule.py  test_dataset.py
tests/test_model/: test_model_wrapper.py  test_multi_label_model.py  test_utils.py
tests/test_scripts/: test_utils.py
tmlc/: exceptions.py  utils.py
tmlc/app/: app.py
tmlc/components/: calculate_best_thresholds.py  get_data.py  load_data.py  loss.py  metrics.py  predictions.py  process_data.py  split_data.py  thresholds.py
tmlc/configclasses/: __init__.py  data_module_config.py  dataset_config.py  lightning_module_config.py  mlflow_config.py  model_config.py  partial_function_config.py  pretrained_config.py  tokenizer_config.py  trainer_config.py
tmlc/dataclasses/: __init__.py  datamodule.py  dataset.py  message.py
tmlc/eda/: render.py  template.md
tmlc/exploratory/: __init__.py  configclasses.py  datapreparation.py  pretraining.py  render.py  template.md  (+1 more)
(+59 files in other folders)
