[tool.poetry]
name = "tmlc"
version = "0.1.0"
description = "A text multi-label classification model."
authors = [
    "Miquel Oliver <your.email@example.com>"
]
readme = "README.md"
packages = [
    { include = "tmlc" },
]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.12.0"
scikit-multilearn = "^0.2.0"
loguru = "^0.6.0"
pandas = "^2.0.0"
fastapi = ">=0.80"
pytest-mock = "^3.10.0"
scikit-learn = "^1.2.2"
tensorboard = "^2.12.1"
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"
click = "^8.1.3"
lightning = "^2.0.1"
onnx = "^1.13.1"
onnxruntime = "^1.14.1"
numba = ">0.56"
mlflow = "^2.1.1"
pre-commit = "^3.2.2"
seaborn = "^0.12.2"
textblob = "^0.17.1"
spacy = "^3.5.1"
markdown2 = "^2.4.8"
captum = "^0.6.0"
ipython = "^8.12.0"
pylint = "^2.17.2"

[tool.mypy]
disallow_untyped_calls = "True"
disallow_untyped_defs = "True"
no_implicit_optional = "True"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
